<resources>
    <string name="app_name">App Manager</string>
    <string name="openwith">Open with</string>
    <string name="noappfound">No app found</string>
    <string name="clipboard_path_copy">path copied</string>
    <string name="not_allowed">Not allowed</string>
    <string name="sort">Sort</string>
    <string name="sortName">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sortSize">Size</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sortby">Sort By</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="properties">Properties</string>
    <string name="play">Open in Play store</string>
    <string name="share">Share</string>
    <string name="uninstall_msg">Uninstall unused apps to free storage</string>
    <string name="backup_msg">Backup installed app\'s APK file</string>
    <string name="app_permissions">App Permissions</string>
    <string name="permission_msg">Check permissions for installed apps.</string>
    <string name="app_package_name">App Package Name</string>
    <string name="package_msg">See installed app\'s package name for devs.</string>
    <string name="permission">Permissions</string>
    <string name="copying_apk">Copying apk to %s</string>
    <string name="uninstall_manager">Uninstall manager</string>
    <string name="backup_manager">APK Backup manager</string>
    <string name="permission_manager">Permissions manager</string>
    <string name="package_manager">App package manager</string>
    <string name="ok">Ok</string>
    <string name="permission_desc">Permission details</string>
    <string name="no_permission">No permissions</string>
    <string name="beware_unregistering_device_admin">Warning: If this option is deactivated, anyone can uninstall App manager and access all apps.</string>
    <string name="add_admin_extra_app_text">Activate this option to allow Hexlock to ask for a passcode if a user tries to uninstall this app.</string>

    <!--admob banner adunit ids-->
    <string name="appmanager_firstscreen_banner">ca-app-pub-6103213878258636/2297023300</string>
    <string name="appmanager_app_uninstall_banner">ca-app-pub-6103213878258636/5250489703</string>
    <string name="appmanager_app_backup_banner">ca-app-pub-6103213878258636/6727222909</string>
    <string name="appmanager_app_permissions_banner">ca-app-pub-6103213878258636/8203956109</string>
    <string name="appmanager_app_package_banner">ca-app-pub-6103213878258636/9680689305</string>
    <string name="appmanager_interstitial_unit_id">ca-app-pub-6103213878258636/6308420501</string>

    <string name="user_apps">User Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="section_format">Page %1$d</string>
    <string name="app_uninstall_manager">App Uninstall Manager</string>
    <string name="app_backup_manager">App Backup Manager</string>
    <string name="app_permissions_manager">App Permissions Manager</string>
    <string name="app_package_manager">App Package Manager</string>
    <string name="rate_us">Rate us</string>
    <string name="selected_count">%1$s selected</string>
    <string name="please_select_atleast">Please select atleast 1 app</string>
    <string name="app_memory_manager">App Memory Manager</string>
    <string name="memory_msg">Check memory usage and freeing up memory and boosting the device\'s speed.</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="storage_usage">Storage Usage</string>
    <string name="used">Used</string>
    <string name="free">Free</string>
    <string name="storage_permission_permissions_needed">Storage permissions are needed to backup apps.</string>
    <string name="action_settings">Settings</string>
    <string name="storage_permission_go_to_settings">Storage permissions are needed to backup apps. Please go to settings</string>
    <string name="allow">Allow</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="invitation_cta">Install</string>
    <string name="invitation_message">Invitation message</string>
    <string name="mail_feedback_subject">App Manager - Feedback</string>
    <string name="mail_feedback_message">Message</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="mail_feedback_email">deeppandya91@gmail.com</string>
    <string name="long_press_hint">Long press on apps to select multiple apps.</string>
    <string name="backup_can_be_found">Back up can be found at %s</string>
    <string name="amazing_apps">Amazing apps</string>
    <string name="app_uninstall_msg">Perform single or batch uninstall operations for unwanted apps that persistently take up phone memory, reducing the device performance.</string>
    <string name="app_backup_msg">App Backup Manager is a handy tool to backup installed application to share with your friends without connecting to the internet.</string>
    <string name="app_permission_msg">App Permissions Manager is a tool designed to resolve user\'s concern regarding permissions used by apps.</string>
    <string name="feature_request">Feature request</string>
    <string name="bug_report">Bug report</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="mail_feature_request_subject">App Manager - Feature request</string>
    <string name="title_send_feature_request">Send feature request</string>
    <string name="mail_bug_report_subject">App Manger - Bug report</string>
    <string name="title_send_bug_report">Send bug report</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="recommended_apps">Recommended apps</string>
    <string name="app_of_the_day">App of the day</string>
    <string name="close">Close</string>
    <string name="allow_application_manager">Allow application manager for storage permission to enable Backup Manager</string>
    <string name="deny">Deny</string>
    <string name="number_of_permissions">%s permissions</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="backed_up_apps">Backed up apps</string>
    <string name="app_backedup_manager">Backed up applications</string>
    <string name="initializing">Initializating apps...</string>
    <string name="developed_by">Developed by Logiciel Apps</string>

    <string name="facebook_app_id">291507681300038</string>
    <string name="not_now">Not Now</string>
    <string name="how_was_your_exp">How was your experience using Application manager?</string>
    <string name="tell_us_what_went_wrong">Tell us what went wrong\nWe\'ll work on it!</string>
</resources>
