<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_rate"
        android:title="@string/rate_us"
        android:icon="@drawable/ic_favorite_white"
        app:showAsAction="always"/>
    <item android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never"/>
    <!--<item android:id="@+id/action_faq"-->
        <!--android:title="@string/faq"-->
        <!--app:showAsAction="never"/>-->
    <item android:id="@+id/action_feedback"
        android:title="@string/feedback"
        app:showAsAction="never"/>
    <item android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item android:id="@+id/action_feature_request"
        android:title="@string/feature_request"
        app:showAsAction="never"/>
    <item android:id="@+id/action_bug_report"
        android:title="@string/bug_report"
        app:showAsAction="never"/>
    <item android:id="@+id/action_privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>
    <item android:id="@+id/action_amazing_apps"
        android:title="@string/amazing_apps"
        app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>