<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_sortby"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/sort"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_user_apps"
        android:title="@string/user_apps"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_system_apps"
        android:title="@string/system_apps"
        app:showAsAction="never"></item>

    <item android:id="@+id/action_amazing_apps"
        android:title="@string/amazing_apps"
        app:showAsAction="never"/>

</menu>