<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deeppandya.appmanager.FirstActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/uninstall_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@color/colorRed"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_delete_black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/uninstall"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/uninstall_msg"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/backup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@color/colorBlue"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_get_app_black_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/backup"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/backup_msg"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/permission_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@color/colorGreen"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_info_outline_black_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/app_permissions"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/permission_msg"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/package_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@color/colorOrange"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_android_black_24dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/app_package_name"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:text="@string/package_msg"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <!--<com.google.android.gms.ads.doubleclick.PublisherAdView-->
        <!--android:id="@+id/publisherAdView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--app:adSize="BANNER"-->
        <!--app:adUnitId="/6499/example/banner"/>-->

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/appmanager_firstscreen_banner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>

